--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="rps.js"></script>
+    <h1>Rock Paper or Scissors?</h1>
+    <div class="button-container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div class="results">
+        <span>Player:<span id="player-score">0</span></span>
+        <span>Computer:<span id="computer-score">0</span></span>
+    </div>
+    <div>
+        <span id="win-lose"></span>
+    </div>
 
+    <script src="rps.js"></script>
 </body>
 </html>
